examples/test/testpolicy15481.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15481
  namespace: namespace56
spec:
  podSelector:
    matchLabels:
      key46: value8
      key43: value11
      key5: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value13
      podSelector:
        matchLabels:
          key6: value15
